Updates to codelab

--- a/codelabs/compose-unsung-hero/index.html
+++ b/codelabs/compose-unsung-hero/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>How to Write a Codelab</title>
+  <title>Composifying Unsung Hero App</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/codelab-elements/codelab-elements.css">
@@ -22,10 +22,10 @@
 <body>
   <google-codelab-analytics gaid="UA-49880327-14"></google-codelab-analytics>
   <google-codelab codelab-gaid=""
-                  id="how-to-write-a-codelab"
-                  title="How to Write a Codelab"
+                  id="compose-unsung-hero"
+                  title="Composifying Unsung Hero App"
                   environment="web"
-                  feedback-link="https://zarin.io">
+                  feedback-link="https://github.com/randalvance/codelab-unsunghero/issues">
     
       <google-codelab-step label="Overview" duration="1">
         <h2 class="checklist" is-upgraded>What You&#39;ll Learn</h2>
