--- a/codelabs/compose-unsung-hero/index.html
+++ b/codelabs/compose-unsung-hero/index.html
@@ -27,15 +27,9 @@
                   environment="web"
                   feedback-link="https://github.com/randalvance/codelab-unsunghero/issues">
     
-      <google-codelab-step label="Overview" duration="1">
-        <h2 class="checklist" is-upgraded>What You&#39;ll Learn</h2>
-<ul class="checklist">
-<li>how to set the amount of time each slide will take to finish</li>
-<li>how to include code snippets</li>
-<li>how to hyperlink items</li>
-<li>how to include images</li>
-<li>other stuff</li>
-</ul>
+      <google-codelab-step label="Install Android Studio" duration="1">
+        <p>Download the Canary Build of Android Studio from the following link:</p>
+<p><a href="https://developer.android.com/studio/preview" target="_blank">https://developer.android.com/studio/preview</a></p>
 
 
       </google-codelab-step>
